--- a/app/globals.css
+++ b/app/globals.css
@@ -6,10 +6,10 @@
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+   --primary: "#D72638";
+   --secondary: "";
+   --accent: "#77C3EC";
+   
 }
 
 @media (prefers-color-scheme: dark) {
