--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,13 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+   --color-primary: #D72638;
+   --color-secondary: ;
+   --color-accent: #77C3EC;   
 }
 
-@theme inline {
-   --primary: "#D72638";
-   --secondary: "";
-   --accent: "#77C3EC";
-   
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: #F5F5F5;
   font-family: Arial, Helvetica, sans-serif;
 }
