services frame completed

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,8 +6,11 @@
    --color-accent: #77C3EC;   
 }
 
-
 body {
   background: #F5F5F5;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.page_header{
+  @apply text-6xl font-extrabold text-center;
 }
