--- a/app/globals.css
+++ b/app/globals.css
@@ -12,5 +12,9 @@ body {
 }
 
 .page_header{
-  @apply text-6xl font-extrabold text-center;
+  @apply text-3xl font-extrabold text-center sm:text-4xl md:text-6xl mb-3;
+}
+
+.nav-active{
+  @apply !text-primary;
 }
