--- a/app/globals.css
+++ b/app/globals.css
@@ -18,3 +18,8 @@ body {
 .nav-active{
   @apply !text-primary;
 }
+
+.hover_raise{
+  @apply transition-all hover:border-red-600 hover:shadow-md hover:-translate-y-3.5 border-gray-200
+}
+
