--- a/app/globals.css
+++ b/app/globals.css
@@ -20,5 +20,5 @@ body {
 }
 
 .hover_raise{
-  @apply transition-all hover:border-red-600 hover:shadow-md hover:-translate-y-3.5 border-gray-200
+  @apply transition-all hover:border-red-600 hover:shadow-md hover:-translate-y-3.5 border-gray-200 border-[1px]
 }
